# ocean-pv

./: .coveragerc  .gitignore  .gitmodules  .new.swp  .readthedocs.yml  .travis.yml  README.md  README.rst  README2.rst  conftest.py  json_data.json  manage.py  pyproject.toml  pytest.ini  requirements.txt  start  start.sh
decorators/: __init__.py  captcha.py  save_answers_decorator.py
docs/: README.rst  authors.rst  conf.py  index.rst  license.rst  manage.py  requirements-all.txt  requirements-dev.txt  starting.rst  testing.rst
docs/modules/: interactions.rst
docs/source/: conf.py
graphs/: forms.py  json_views.py  urls.py  views.py
graphs/functions/: __init__.py  area_calculator.py  cleaner.py  descriptions.json  dict_data.py  graph_wrapper.py  new.py  percentages.py  plotter.py  scores.py  utils.py
graphs/functions_container/: functions.py
graphs/tests/: conftest.py  test_urls.py  test_views.py  test_views_get.py
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/templates/: base.html
home/tests/: test_urls.py  test_views.py  test_views_get.py
integrated_tests/: conftest.py  test_ocean_personality_visualizations.py  test_something.py
interactions/: admin.py  forms.py  functions.py  json_views.py  models.py  urls.py  validators.py  views.py
interactions/fixtures/: questions.json  self_questions.json
interactions/functions/: __init__.py  answer_saver.py  find_users.py  get_data.py  (+1 more)
mixins/: __init__.py  custom_mixins.py
ocean_website/: wsgi.py
users/: forms.py  models.py  signals.py  urls.py  views.py
(+92 files in other folders)
