[tool.poetry]
name = "OCEAN-personality-visualizations"
version = "0.1.0"
description = ""
authors = ["ignisda <ignisda2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
django-crispy-forms = "^1.9.1"
pillow = "^7.1.2"
bcrypt = "^3.1.7"
django-widget-tweaks = "^1.4.8"
plotly = "^4.8.1"
django-countries = "^6.1.2"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.1.0"
autopep8 = "^1.5.3"
pytest-django = "^3.9.0"
pytest-xdist = "^1.32.0"
selenium = "^3.141.0"
pytest-cov = "^2.9.0"
mixer = "^6.1.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
